Fix: fixed logo not showing

--- a/Frontend/src/modules/Login.css
+++ b/Frontend/src/modules/Login.css
@@ -16,3 +16,7 @@
   border-radius: 0px;
   background-color: var(--primary-color);
 }
+#logo {
+  width: 120px;
+  height: auto;
+}
